fixed spacing

--- a/angular-checkers/src/app/board/board.component.css
+++ b/angular-checkers/src/app/board/board.component.css
@@ -1,8 +1,9 @@
 .board {
-    height: 250;
-    width: 250;
-    padding: 0%;
+    display: flex;
+   
+    
 }
+
 
 
 
