--- a/angular-checkers/src/app/piece/piece.component.css
+++ b/angular-checkers/src/app/piece/piece.component.css
@@ -3,12 +3,21 @@
     width: 50px;
     background-color: #bbb;
     border-radius: 50%;
-    display: inline-block;
+    display: flex;
     position: relative;
     text-align: center;
+    flex-wrap: wrap;
+    justify-content: center;
   }
 
   .pawn {
 	width: 80%;
 	height: 80%;
 }
+
+.middle {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
